--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="Main">
-        <unclude src="partials/header.html"></unclude>
+        <include src="partials/header.html"></include>
         <div id="app"></div>
     </main>
 </body>
