--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link type="text/css" href="styles.css" rel="stylesheet">
+    <link type="text/css" href="/index.4d663569.css" rel="stylesheet">
 </head>
 
 <body>
     <main class="Main">
-        <include src="partials/header.html"></include>
+        <h1>PlatziStore</h1>
         <div id="app"></div>
     </main>
-</body>
+<script src="/proyecto-parcel.59712999.js"></script></body>
 
-<script defer src="index.js"></script>
+<script defer="" src="/index.579125c3.js"></script>
 </html>
